Fix LSTM model training